--- a/front-end-css-concept-opdracht(1)/style.css
+++ b/front-end-css-concept-opdracht(1)/style.css
@@ -253,8 +253,8 @@ footer{
     }
 }
 
-
-/*---------------9. bonus opdracht-------------*/
+/*
+/*---------------9. bonus opdracht-------------*
 
 .driehoek-0, .driehoek-1, .driehoek-2 {
     bottom: 0;
